# amx-machine-for-windows

./: CMakeLists.txt  LICENSE  README.md  history.txt  mingw-w64-x86_64.cmake
amx/: .find_alloca_includes.sh.swp  CMakeLists.txt  CMakeLists.txt.bk  amx.h  amx.h.bk
compiler/: pawncc.rc  sc1.c  sc3.c  sc5.c  sc5.scp  svnrev.h
